fixing home and about text alignment

--- a/src/pages/text.css
+++ b/src/pages/text.css
@@ -1,7 +1,6 @@
 .content2{
     position: absolute;
     width: 100%;
-    padding:20%;
     top:1;
     display:flex;
     flex-direction: column;
